@@ -36,10 +36,6 @@
 #include "SDCCglobl.h"
 #include "newalloc.h"
 
-#if defined(_MSC_VER) && (_MSC_VER < 1300)
-#define __FUNCTION__            __FILE__
-#endif
-
 #include "common.h"
 #include "SDCCpeeph.h"
 #include "ralloc.h"
